--- a/index.html
+++ b/index.html
@@ -2,13 +2,42 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Properties</title>
+    <title>Vacation Homes</title>
+    <script src="properties.js" async></script>
+    <link href="main.css" rel="stylesheet">
 </head>
 <body>
-<article>
+<h1>Normal Properties</h1>
+<button> Chicago Baby!</button>
+<button>Available?</button>
+<p> </p>
+<button>It's Cold out Here!</button>
+<button>Available?</button>
+<h1>Special Rate Properties</h1>
+<button>special</button>
+<button>CLICK FOR REDUCED RATE</button>
+<button>Available?</button>
+<h1>Super Host Properties</h1>
+<button>BILLION DOLLAR MANSION</button>
+<button>Click for Host Rating</button>
+<button>Available?</button>
+<main>
+    <div id="1">
+
+    </div>
+
+    <div id="2">
+
+    </div>
+
+
     <section>
-        <button>description</button>
+
     </section>
-</article>
+
+</main>
+
 </body>
 </html>
+
+
