--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <button>BILLION DOLLAR MANSION</button>
 <button>Click for Host Rating</button>
 <button>Available?</button>
-<main>
+<main id="main">
     <div id="1">
 
     </div>
@@ -30,12 +30,13 @@
 
     </div>
 
+</main >
 
-    <section>
+<section>
 
-    </section>
+</section>
 
-</main>
+
 
 </body>
 </html>
